--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "ed67b10b-99c0-4a1c-bf17-f95c07fecd8d",
    "metadata": {},
    "outputs": [],
@@ -83,25 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f527d4ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_input(driver):\n",
-    "    for k in range(100):\n",
-    "        driver.find_element(By.ID, \"l5smshnt-input\").send_keys(Keys.BACKSPACE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "id": "2a661e52",
    "metadata": {},
    "outputs": [],
    "source": [
     "def interroger_stromae(driver, libelle : str) -> list[str]:\n",
-    "    remove_input(driver)\n",
+    "    driver.find_element(By.ID, \"l5smshnt-input\").clear()\n",
     "    driver.find_element(By.ID, \"l5smshnt-input\").send_keys(libelle)\n",
     "    time.sleep(1)\n",
     "    element_liste = driver.find_element(By.ID, \"l5smshnt-list\")\n",
@@ -171,19 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "1e511ef9",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv(chemin_paradonnees,dtype=str)\n",
     "data = data[[\"PCLCA\",\"PCLCALIBELLEMAX\",\"SEXE\"]]\n",
-    "data = data.loc[~data[\"PCLCA\"].isna(),].loc[data[\"PCLCA\"]!=\"999\",].loc[data[\"SEXE\"]==\"1\"]"
+    "data = data.loc[~data[\"PCLCA\"].isna(),]\n",
+    "data = data.loc[data[\"PCLCA\"]!=\"999\",]\n",
+    "data = data.loc[data[\"SEXE\"]==\"1\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "id": "b7245e6e",
    "metadata": {},
    "outputs": [],
@@ -193,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "a01d08a7",
    "metadata": {},
    "outputs": [
@@ -220,87 +210,112 @@
        "      <th></th>\n",
        "      <th>PCLCA</th>\n",
        "      <th>PCLCALIBELLEMAX</th>\n",
+       "      <th>SEXE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Manipulatrice en électroradiologie</td>\n",
-       "      <td>Manip</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Dessinateur projeteur industriel</td>\n",
        "      <td>Dessinateur in</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Contrôleur qualité de l'industrie</td>\n",
        "      <td>contrôleur qualité</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Technicien d'assistance en informatique</td>\n",
        "      <td>tech</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Agent de production métallurgique</td>\n",
-       "      <td>agent de pro</td>\n",
+       "      <th>13</th>\n",
+       "      <td>Vendeur d'articles de sport</td>\n",
+       "      <td>VENDEUR</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Apprenti maçon</td>\n",
+       "      <td>apprenti macon</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>Fleuriste</td>\n",
-       "      <td>fleu</td>\n",
+       "      <th>489</th>\n",
+       "      <td>Agent de gestion des collectivités territoriales</td>\n",
+       "      <td>AGENT TERRITORIALES</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>254</th>\n",
-       "      <td>Cadre de santé formatrice</td>\n",
-       "      <td>cadre de sante f</td>\n",
+       "      <th>518</th>\n",
+       "      <td>Chauffeur de bus, de car</td>\n",
+       "      <td>chauffeur</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>255</th>\n",
-       "      <td>Ingénieur d'application informatique</td>\n",
-       "      <td>inge</td>\n",
+       "      <th>523</th>\n",
+       "      <td>Ingénieur qualité</td>\n",
+       "      <td>ingénieur qualité</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>Secrétaire</td>\n",
-       "      <td>secretaire</td>\n",
+       "      <th>532</th>\n",
+       "      <td>Responsable des services techniques</td>\n",
+       "      <td>RESPONSABLE T</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>Artisan du bâtiment</td>\n",
-       "      <td>artisan</td>\n",
+       "      <th>536</th>\n",
+       "      <td>Enseignant certifié en lycée (CAPES, CAPET)</td>\n",
+       "      <td>enseignant</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       PCLCA     PCLCALIBELLEMAX\n",
-       "2         Manipulatrice en électroradiologie               Manip\n",
-       "3           Dessinateur projeteur industriel      Dessinateur in\n",
-       "4          Contrôleur qualité de l'industrie  contrôleur qualité\n",
-       "5    Technicien d'assistance en informatique                tech\n",
-       "6          Agent de production métallurgique        agent de pro\n",
-       "..                                       ...                 ...\n",
-       "251                                Fleuriste                fleu\n",
-       "254                Cadre de santé formatrice    cadre de sante f\n",
-       "255     Ingénieur d'application informatique                inge\n",
-       "257                               Secrétaire          secretaire\n",
-       "258                      Artisan du bâtiment             artisan\n",
+       "                                                PCLCA      PCLCALIBELLEMAX  \\\n",
+       "3                    Dessinateur projeteur industriel       Dessinateur in   \n",
+       "4                   Contrôleur qualité de l'industrie   contrôleur qualité   \n",
+       "5             Technicien d'assistance en informatique                 tech   \n",
+       "13                        Vendeur d'articles de sport              VENDEUR   \n",
+       "22                                     Apprenti maçon       apprenti macon   \n",
+       "..                                                ...                  ...   \n",
+       "489  Agent de gestion des collectivités territoriales  AGENT TERRITORIALES   \n",
+       "518                          Chauffeur de bus, de car            chauffeur   \n",
+       "523                                 Ingénieur qualité    ingénieur qualité   \n",
+       "532               Responsable des services techniques        RESPONSABLE T   \n",
+       "536       Enseignant certifié en lycée (CAPES, CAPET)           enseignant   \n",
        "\n",
-       "[100 rows x 2 columns]"
+       "    SEXE  \n",
+       "3      1  \n",
+       "4      1  \n",
+       "5      1  \n",
+       "13     1  \n",
+       "22     1  \n",
+       "..   ...  \n",
+       "489    1  \n",
+       "518    1  \n",
+       "523    1  \n",
+       "532    1  \n",
+       "536    1  \n",
+       "\n",
+       "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "b9cd9dae",
    "metadata": {},
    "outputs": [],
@@ -328,17 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "id": "95fb6090",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [02:08<00:00,  1.29s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "benchmark_stromae(data, driver)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "id": "a08f4f67",
    "metadata": {},
    "outputs": [
@@ -366,111 +389,123 @@
        "      <th>I_PRESENCE_STROMAE</th>\n",
        "      <th>PCLCA</th>\n",
        "      <th>PCLCALIBELLEMAX</th>\n",
+       "      <th>SEXE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>Manipulatrice en électroradiologie</td>\n",
-       "      <td>Manip</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>False</td>\n",
        "      <td>Dessinateur projeteur industriel</td>\n",
        "      <td>Dessinateur in</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>False</td>\n",
        "      <td>Contrôleur qualité de l'industrie</td>\n",
        "      <td>contrôleur qualité</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>False</td>\n",
        "      <td>Technicien d'assistance en informatique</td>\n",
        "      <td>tech</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>13</th>\n",
        "      <td>False</td>\n",
-       "      <td>Agent de production métallurgique</td>\n",
-       "      <td>agent de pro</td>\n",
+       "      <td>Vendeur d'articles de sport</td>\n",
+       "      <td>VENDEUR</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Apprenti maçon</td>\n",
+       "      <td>apprenti macon</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>251</th>\n",
+       "      <th>489</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Agent de gestion des collectivités territoriales</td>\n",
+       "      <td>AGENT TERRITORIALES</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Chauffeur de bus, de car</td>\n",
+       "      <td>chauffeur</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>523</th>\n",
        "      <td>True</td>\n",
-       "      <td>Fleuriste</td>\n",
-       "      <td>fleu</td>\n",
+       "      <td>Ingénieur qualité</td>\n",
+       "      <td>ingénieur qualité</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>254</th>\n",
+       "      <th>532</th>\n",
        "      <td>False</td>\n",
-       "      <td>Cadre de santé formatrice</td>\n",
-       "      <td>cadre de sante f</td>\n",
+       "      <td>Responsable des services techniques</td>\n",
+       "      <td>RESPONSABLE T</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>255</th>\n",
+       "      <th>536</th>\n",
        "      <td>False</td>\n",
-       "      <td>Ingénieur d'application informatique</td>\n",
-       "      <td>inge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>False</td>\n",
-       "      <td>Secrétaire</td>\n",
-       "      <td>secretaire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>False</td>\n",
-       "      <td>Artisan du bâtiment</td>\n",
-       "      <td>artisan</td>\n",
+       "      <td>Enseignant certifié en lycée (CAPES, CAPET)</td>\n",
+       "      <td>enseignant</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 3 columns</p>\n",
+       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     I_PRESENCE_STROMAE                                    PCLCA  \\\n",
-       "2                 False       Manipulatrice en électroradiologie   \n",
-       "3                 False         Dessinateur projeteur industriel   \n",
-       "4                 False        Contrôleur qualité de l'industrie   \n",
-       "5                 False  Technicien d'assistance en informatique   \n",
-       "6                 False        Agent de production métallurgique   \n",
-       "..                  ...                                      ...   \n",
-       "251                True                                Fleuriste   \n",
-       "254               False                Cadre de santé formatrice   \n",
-       "255               False     Ingénieur d'application informatique   \n",
-       "257               False                               Secrétaire   \n",
-       "258               False                      Artisan du bâtiment   \n",
+       "     I_PRESENCE_STROMAE                                             PCLCA  \\\n",
+       "3                 False                  Dessinateur projeteur industriel   \n",
+       "4                 False                 Contrôleur qualité de l'industrie   \n",
+       "5                 False           Technicien d'assistance en informatique   \n",
+       "13                False                       Vendeur d'articles de sport   \n",
+       "22                 True                                    Apprenti maçon   \n",
+       "..                  ...                                               ...   \n",
+       "489               False  Agent de gestion des collectivités territoriales   \n",
+       "518               False                          Chauffeur de bus, de car   \n",
+       "523                True                                 Ingénieur qualité   \n",
+       "532               False               Responsable des services techniques   \n",
+       "536               False       Enseignant certifié en lycée (CAPES, CAPET)   \n",
        "\n",
-       "        PCLCALIBELLEMAX  \n",
-       "2                 Manip  \n",
-       "3        Dessinateur in  \n",
-       "4    contrôleur qualité  \n",
-       "5                  tech  \n",
-       "6          agent de pro  \n",
-       "..                  ...  \n",
-       "251                fleu  \n",
-       "254    cadre de sante f  \n",
-       "255                inge  \n",
-       "257          secretaire  \n",
-       "258             artisan  \n",
+       "         PCLCALIBELLEMAX SEXE  \n",
+       "3         Dessinateur in    1  \n",
+       "4     contrôleur qualité    1  \n",
+       "5                   tech    1  \n",
+       "13               VENDEUR    1  \n",
+       "22        apprenti macon    1  \n",
+       "..                   ...  ...  \n",
+       "489  AGENT TERRITORIALES    1  \n",
+       "518            chauffeur    1  \n",
+       "523    ingénieur qualité    1  \n",
+       "532        RESPONSABLE T    1  \n",
+       "536           enseignant    1  \n",
        "\n",
-       "[100 rows x 3 columns]"
+       "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,54 +516,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "28aecfaf-3f42-4d04-a0ea-45fd6ec1bc51",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "elements = x.find_elements(By.CLASS_NAME, 'label')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "d926b1f8",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "32"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(elements)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "8d3bad47",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Agent de station d'épuration\""
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "elements[0].text"
+    "sum(data.I_PRESENCE_STROMAE)"
    ]
   }
  ],
